--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jszip": "^3.10.1",
     "mime-types": "^3.0.1",
     "mitt": "^3.0.1",
+    "puppeteer": "^24.8.2",
     "register-service-worker": "^1.7.2",
     "throttle-debounce": "^5.0.2",
     "tone": "^15.1.22",
